--- a/package.json
+++ b/package.json
@@ -32,9 +32,10 @@
     "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.6.0",
     "postcss-loader": "^6.2.1",
-    "webpack-cli": "^4.9.2"
+    "webpack-cli": "^4.9.2",
+    "webpack-dev-server": "^4.9.1"
   },
   "dependencies": {
-    "core-js": "^2.6.12"
+    "core-js": "^3.22.8"
   }
 }
