--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "mesto-project",
   "version": "1.0.0",
   "description": "Проект Место",
-  "main": "index.js",
+  "main": "index.j" ,
   "scripts": {
     "build": "webpack --mode production",
     "dev": "webpack serve",
